--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
+# Max file size.
+spring.servlet.multipart.max-file-size=15MB
+# Max request size.
+spring.servlet.multipart.max-request-size=20MB
