--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 # Max file size.
-spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-file-size=10000MB
 # Max request size.
-spring.servlet.multipart.max-request-size=25MB
+spring.servlet.multipart.max-request-size=10050MB
