--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-spring.datasource.username=postgres
-spring.datasource.password=password
 spring.datasource.url=jdbc:postgresql://localhost:5432/test?user=${spring.datasource.username}&password=${spring.datasource.password}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driverClassName=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 
-# Max file size.
-spring.servlet.multipart.max-file-size=10000MB
-# Max request size.
-spring.servlet.multipart.max-request-size=10050MB
+# Http request configs
+spring.servlet.multipart.max-file-size=${custom.http.max.file.size}
+spring.servlet.multipart.max-request-size=${custom.http.max.request.size}
