--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Http request configs
 spring.servlet.multipart.max-file-size=${custom.http.max.file.size}
 spring.servlet.multipart.max-request-size=${custom.http.max.request.size}
+
+#Actuator settings
+management.endpoints.web.exposure.include=env
