Added database as a volume, so database does not get deleted every time docker-compose is run

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ buildNumber.properties
 
 ### Video recordings ###
 src/main/resources/videos
+
+### Database files ###
+src/main/resources/database
